k8s/checkout-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-api
  namespace: freshcart

spec:
  replicas: 2
  selector:
    matchLabels:
      app: checkout-api
  
  template:
    metadata:
      labels:
        app: checkout-api

    spec:
      containers:
        - name: checkout-api
          image: checkout-api:v3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
