k8s/checkout-api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: checkout-api
  namespace: freshcart

spec:
  type: ClusterIP
  selector:
    app: checkout-api

  ports:
    - port: 80
      targetPort: 3000
